--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
   ],
   "author": "K. P. MacGregor <phoenixstormcrow@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "babel-eslint": "^3.1.1",
-    "eslint": "^0.21.0"
-  }
+  "devDependencies": {}
 }
